# client-python

./: Makefile  README.md  pyproject.toml  tox.ini
tests/: test_interceptor.py  test_transport.py
walleta/: __init__.py  compat.py  context.py  models.py  transport.py  utils.py
walleta/extractors/: __init__.py  openai.py
walleta/interceptors/: __init__.py  aiohttp.py  httpx.py  urllib3.py
