[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "your-package-name"
version = "0.1.0"
description = "A short description"
authors = [{name = "Your Name", email = "your.email@example.com"}]
requires-python = ">=3.9"
dependencies = [
    "httpx >= 0.28.1",
    "typing_extensions >= 4.6; python_version < '3.11'"
]